<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingLeft="15dp"
            android:text="@string/setting"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/rela_enable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:text="@string/enable"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/cb_enable"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:checked="true"
                android:clickable="false" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rela_hide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:text="@string/hide"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/cb_hide"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:clickable="false" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rela_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:text="@string/log"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/cb_log"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:clickable="false" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_update"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:text="@string/menu_update"
            android:textColor="@color/colorText"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_faq"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:text="@string/menu_faq"
            android:textColor="@color/colorText"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:text="@string/origin_priority"
                android:textColor="@color/colorAccent"
                android:textSize="12sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_question"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_marginStart="5dp"
                android:src="@mipmap/question" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/rg_origin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_a"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:button="@null"
                android:checked="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/kuwo"
                android:textColor="@color/color_radio"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/rb_b"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:button="@null"
                android:checked="false"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/migu"
                android:textColor="@color/color_radio"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/rb_c"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:button="@null"
                android:checked="false"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/kugou"
                android:textColor="@color/color_radio"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/rb_d"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:button="@null"
                android:checked="false"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/qq"
                android:textColor="@color/color_radio"
                android:textSize="15sp" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingLeft="15dp"
            android:text="@string/other"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/version"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textColor="@color/colorButton_text"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/script"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_script"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textColor="@color/colorButton_text"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/perfect"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical|right"
                android:orientation="vertical"
                android:paddingEnd="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:id="@+id/tv_perfect1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorButton_text"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_perfect2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorButton_text"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>